--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="assets/images/Sculpt2.png" alt="Clay Sculpture 2" class="product-card__image">
+                        <img src="assets/images/hoodie.png" alt="Clay Sculpture 2" class="product-card__image">
                         <div class="product-card__info">
-                            <h3 class="product-card__title">Clay Sculpture 2</h3>
+                            <h3 class="product-card__title">ACM Hoodie</h3>
                             <p class="product-card__price">&pound;39.99</p>
                         </div>
                     </div>
