additional changes to styling and formatting!

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     <main>
         <section class="featured-products">
             <div class="container">
-                <h2 class="products-section__title">Popular Items</h2>
                 <div class="products-grid">
                     
                     <!-- Example Products without "Add to Cart" button -->
@@ -59,19 +58,19 @@
                             <p class="product-card__price">&pound;39.99</p>
                         </div>
                     </div>
-                    <div class="product-card">
+                    <!-- <div class="product-card">
                         <img src="assets/images/Sculpt3.png" alt="Clay Sculpture 3" class="product-card__image">
                         <div class="product-card__info">
                             <h3 class="product-card__title">Clay Sculpture 3</h3>
                             <p class="product-card__price">&pound;24.99</p>
-                        </div>
-                    </div>
+                        </div> 
+                    </div>-->
                     
-                    <!-- Shopify Buy Button Embed Code -->
+                    <!-- Shopify Buy Button Embed Code 
                     <div class="product-card">
                         <div id="product-component-1729800134598"></div>
                     </div>
-                    <!-- End of Shopify Buy Button Embed Code -->
+                     End of Shopify Buy Button Embed Code -->
 
                 </div>
             </div>
