--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             </div>
         </section>
     </main>
+	
+	<script src="js/auth.js"></script>
 
     <!-- Footer -->
     <footer class="footer">
