--- a/shop.html
+++ b/shop.html
@@ -373,7 +373,7 @@
             </div>
         </section>
     </main>
-
+<script src="js/auth.js"></script>
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
