--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                             <p class="product-card__price">&pound;39.99</p>
                         </div>
                     </div>
+					
+					<div class="product-card">
+                        <div id='product-component-1733166958679'></div>
+                    </div>
+					
                     <!-- <div class="product-card">
                         <img src="assets/images/Sculpt3.png" alt="Clay Sculpture 3" class="product-card__image">
                         <div class="product-card__info">
@@ -87,13 +92,13 @@
     </footer>
 
     <!-- Scroll-to-Top Button -->
-    <button class="scroll-to-top" aria-label="Scroll to top">&#8679;</button>
+     <!--<button class="scroll-to-top" aria-label="Scroll to top">&#8679;</button>-->
 
     <!-- Optional: Include your JavaScript file for navigation toggle -->
     <script src="js/scripts.js"></script>
 
     <!-- Shopify Buy Button Script -->
-    <script type="text/javascript">
+     <script type="text/javascript">
     /*<![CDATA[*/
     (function () {
       var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
@@ -115,16 +120,162 @@
       }
       function ShopifyBuyInit() {
         var client = ShopifyBuy.buildClient({
-          domain: 'btvjzr-h9.myshopify.com',
-          storefrontAccessToken: 'f3c07bfc83bc6d467fdd885a67e09ef2',
+          domain: 'wg1jg3-s1.myshopify.com',
+          storefrontAccessToken: '6dbd8f3983b2222a0d22da36dc782902',
         });
         ShopifyBuy.UI.onReady(client).then(function (ui) {
           ui.createComponent('product', {
-            id: '9374108844361',
-            node: document.getElementById('product-component-1729800134598'),
+            id: '14935298572623',
+            node: document.getElementById('product-component-1733166958679'),
             moneyFormat: '%C2%A3%7B%7Bamount%7D%7D',
             options: {
-              // ... (Shopify Buy Button options remain the same) ...
+              "product": {
+                "styles": {
+                  "product": {
+                    "@media (min-width: 601px)": {
+                      "max-width": "100%",
+                      "margin-left": "0",
+                      "margin-bottom": "50px"
+                    },
+                    "text-align": "left"
+                  },
+                  "title": {
+                    "font-size": "26px"
+                  },
+                  "button": {
+                    "font-family": "Avant Garde, sans-serif",
+                    ":hover": {
+                      "background-color": "#a41414"
+                    },
+                    "background-color": "#b61616",
+                    ":focus": {
+                      "background-color": "#a41414"
+                    },
+                    "border-radius": "0px",
+                    "padding-left": "25px",
+                    "padding-right": "25px"
+                  },
+                  "price": {
+                    "font-size": "18px"
+                  },
+                  "compareAt": {
+                    "font-size": "15.299999999999999px"
+                  },
+                  "unitPrice": {
+                    "font-size": "15.299999999999999px"
+                  }
+                },
+                "layout": "horizontal",
+                "contents": {
+                  "img": false,
+                  "imgWithCarousel": true,
+                  "description": true
+                },
+                "width": "100%",
+                "text": {
+                  "button": "Add to cart"
+                }
+              },
+              "productSet": {
+                "styles": {
+                  "products": {
+                    "@media (min-width: 601px)": {
+                      "margin-left": "-20px"
+                    }
+                  }
+                }
+              },
+              "modalProduct": {
+                "contents": {
+                  "img": false,
+                  "imgWithCarousel": true,
+                  "button": false,
+                  "buttonWithQuantity": true
+                },
+                "styles": {
+                  "product": {
+                    "@media (min-width: 601px)": {
+                      "max-width": "100%",
+                      "margin-left": "0px",
+                      "margin-bottom": "0px"
+                    }
+                  },
+                  "button": {
+                    "font-family": "Avant Garde, sans-serif",
+                    ":hover": {
+                      "background-color": "#a41414"
+                    },
+                    "background-color": "#b61616",
+                    ":focus": {
+                      "background-color": "#a41414"
+                    },
+                    "border-radius": "0px",
+                    "padding-left": "25px",
+                    "padding-right": "25px"
+                  },
+                  "title": {
+                    "font-family": "Helvetica Neue, sans-serif",
+                    "font-weight": "bold",
+                    "font-size": "26px",
+                    "color": "#4c4c4c"
+                  },
+                  "price": {
+                    "font-family": "Helvetica Neue, sans-serif",
+                    "font-weight": "normal",
+                    "font-size": "18px",
+                    "color": "#4c4c4c"
+                  },
+                  "compareAt": {
+                    "font-family": "Helvetica Neue, sans-serif",
+                    "font-weight": "normal",
+                    "font-size": "15.299999999999999px",
+                    "color": "#4c4c4c"
+                  },
+                  "unitPrice": {
+                    "font-family": "Helvetica Neue, sans-serif",
+                    "font-weight": "normal",
+                    "font-size": "15.299999999999999px",
+                    "color": "#4c4c4c"
+                  }
+                },
+                "text": {
+                  "button": "Add to cart"
+                }
+              },
+              "option": {},
+              "cart": {
+                "styles": {
+                  "button": {
+                    "font-family": "Avant Garde, sans-serif",
+                    ":hover": {
+                      "background-color": "#a41414"
+                    },
+                    "background-color": "#b61616",
+                    ":focus": {
+                      "background-color": "#a41414"
+                    },
+                    "border-radius": "0px"
+                  }
+                },
+                "text": {
+                  "total": "Subtotal",
+                  "button": "Checkout"
+                }
+              },
+              "toggle": {
+                "styles": {
+                  "toggle": {
+                    "font-family": "Avant Garde, sans-serif",
+                    "background-color": "#b61616",
+                    ":hover": {
+                      "background-color": "#a41414"
+                    },
+                    ":focus": {
+                      "background-color": "#a41414"
+                    }
+                  }
+                }
+              }
             },
           });
         });
@@ -132,5 +283,6 @@
     })();
     /*]]>*/
     </script>
+    <!-- End of Shopify Buy Button Script -->
 </body>
 </html>
