--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								-->
 								
 					<div class="product-card">
-                        <div id='product-component-1733166958679'></div>
+                        <div id='product-component-1733173297838'></div>
                     </div>
 					
 					<div class="product-card">
@@ -103,191 +103,213 @@
     <script src="js/scripts.js"></script>
 
     <!-- Shopify Buy Button Script -->
-     <script type="text/javascript">
-    /*<![CDATA[*/
-    (function () {
-      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-      if (window.ShopifyBuy) {
-        if (window.ShopifyBuy.UI) {
-          ShopifyBuyInit();
-        } else {
-          loadScript();
+    <script type="text/javascript">
+/*<![CDATA[*/
+(function () {
+  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+  if (window.ShopifyBuy) {
+    if (window.ShopifyBuy.UI) {
+      ShopifyBuyInit();
+    } else {
+      loadScript();
+    }
+  } else {
+    loadScript();
+  }
+  function loadScript() {
+    var script = document.createElement('script');
+    script.async = true;
+    script.src = scriptURL;
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+    script.onload = ShopifyBuyInit;
+  }
+  function ShopifyBuyInit() {
+    var client = ShopifyBuy.buildClient({
+      domain: 'e12707-f1.myshopify.com',
+      storefrontAccessToken: 'fbbc74a8d93f3af2c92b63db0d5c0320',
+    });
+    ShopifyBuy.UI.onReady(client).then(function (ui) {
+      ui.createComponent('product', {
+        id: '14752492421464',
+        node: document.getElementById('product-component-1733173297838'),
+        moneyFormat: '%C2%A3%7B%7Bamount%7D%7D',
+        options: {
+  "product": {
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "calc(25% - 20px)",
+          "margin-left": "20px",
+          "margin-bottom": "50px"
+        },
+        "text-align": "left"
+      },
+      "title": {
+        "font-family": "PT Sans, sans-serif",
+        "font-weight": "normal",
+        "color": "#000000"
+      },
+      "button": {
+        "font-family": "PT Sans, sans-serif",
+        ":hover": {
+          "background-color": "#9d9d9d"
+        },
+        "background-color": "#aeaeae",
+        ":focus": {
+          "background-color": "#9d9d9d"
+        },
+        "border-radius": "0px",
+        "padding-left": "33px",
+        "padding-right": "33px"
+      },
+      "price": {
+        "font-family": "PT Sans, sans-serif",
+        "color": "#7b7b7b"
+      },
+      "compareAt": {
+        "font-family": "PT Sans, sans-serif",
+        "color": "#7b7b7b"
+      },
+      "unitPrice": {
+        "font-family": "PT Sans, sans-serif",
+        "color": "#7b7b7b"
+      }
+    },
+    "text": {
+      "button": "Add to cart"
+    },
+    "googleFonts": [
+      "PT Sans"
+    ]
+  },
+  "productSet": {
+    "styles": {
+      "products": {
+        "@media (min-width: 601px)": {
+          "margin-left": "-20px"
         }
-      } else {
-        loadScript();
       }
-      function loadScript() {
-        var script = document.createElement('script');
-        script.async = true;
-        script.src = scriptURL;
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-        script.onload = ShopifyBuyInit;
+    }
+  },
+  "modalProduct": {
+    "contents": {
+      "img": false,
+      "imgWithCarousel": true,
+      "button": false,
+      "buttonWithQuantity": true
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0px",
+          "margin-bottom": "0px"
+        }
+      },
+      "button": {
+        "font-family": "PT Sans, sans-serif",
+        ":hover": {
+          "background-color": "#9d9d9d"
+        },
+        "background-color": "#aeaeae",
+        ":focus": {
+          "background-color": "#9d9d9d"
+        },
+        "border-radius": "0px",
+        "padding-left": "33px",
+        "padding-right": "33px"
+      },
+      "title": {
+        "font-family": "Helvetica Neue, sans-serif",
+        "font-weight": "bold",
+        "font-size": "26px",
+        "color": "#4c4c4c"
+      },
+      "price": {
+        "font-family": "Helvetica Neue, sans-serif",
+        "font-weight": "normal",
+        "font-size": "18px",
+        "color": "#4c4c4c"
+      },
+      "compareAt": {
+        "font-family": "Helvetica Neue, sans-serif",
+        "font-weight": "normal",
+        "font-size": "15.299999999999999px",
+        "color": "#4c4c4c"
+      },
+      "unitPrice": {
+        "font-family": "Helvetica Neue, sans-serif",
+        "font-weight": "normal",
+        "font-size": "15.299999999999999px",
+        "color": "#4c4c4c"
       }
-      function ShopifyBuyInit() {
-        var client = ShopifyBuy.buildClient({
-          domain: 'wg1jg3-s1.myshopify.com',
-          storefrontAccessToken: '6dbd8f3983b2222a0d22da36dc782902',
-        });
-        ShopifyBuy.UI.onReady(client).then(function (ui) {
-          ui.createComponent('product', {
-            id: '14935298572623',
-            node: document.getElementById('product-component-1733166958679'),
-            moneyFormat: '%C2%A3%7B%7Bamount%7D%7D',
-            options: {
-              "product": {
-                "styles": {
-                  "product": {
-                    "@media (min-width: 601px)": {
-                      "max-width": "100%",
-                      "margin-left": "0",
-                      "margin-bottom": "50px"
-                    },
-                    "text-align": "left"
-                  },
-                  "title": {
-                    "font-size": "26px"
-                  },
-                  "button": {
-                    "font-family": "Avant Garde, sans-serif",
-                    ":hover": {
-                      "background-color": "#a41414"
-                    },
-                    "background-color": "#b61616",
-                    ":focus": {
-                      "background-color": "#a41414"
-                    },
-                    "border-radius": "0px",
-                    "padding-left": "25px",
-                    "padding-right": "25px"
-                  },
-                  "price": {
-                    "font-size": "18px"
-                  },
-                  "compareAt": {
-                    "font-size": "15.299999999999999px"
-                  },
-                  "unitPrice": {
-                    "font-size": "15.299999999999999px"
-                  }
-                },
-                "layout": "horizontal",
-                "contents": {
-                  "img": false,
-                  "imgWithCarousel": true,
-                  "description": true
-                },
-                "width": "100%",
-                "text": {
-                  "button": "Add to cart"
-                }
-              },
-              "productSet": {
-                "styles": {
-                  "products": {
-                    "@media (min-width: 601px)": {
-                      "margin-left": "-20px"
-                    }
-                  }
-                }
-              },
-              "modalProduct": {
-                "contents": {
-                  "img": false,
-                  "imgWithCarousel": true,
-                  "button": false,
-                  "buttonWithQuantity": true
-                },
-                "styles": {
-                  "product": {
-                    "@media (min-width: 601px)": {
-                      "max-width": "100%",
-                      "margin-left": "0px",
-                      "margin-bottom": "0px"
-                    }
-                  },
-                  "button": {
-                    "font-family": "Avant Garde, sans-serif",
-                    ":hover": {
-                      "background-color": "#a41414"
-                    },
-                    "background-color": "#b61616",
-                    ":focus": {
-                      "background-color": "#a41414"
-                    },
-                    "border-radius": "0px",
-                    "padding-left": "25px",
-                    "padding-right": "25px"
-                  },
-                  "title": {
-                    "font-family": "Helvetica Neue, sans-serif",
-                    "font-weight": "bold",
-                    "font-size": "26px",
-                    "color": "#4c4c4c"
-                  },
-                  "price": {
-                    "font-family": "Helvetica Neue, sans-serif",
-                    "font-weight": "normal",
-                    "font-size": "18px",
-                    "color": "#4c4c4c"
-                  },
-                  "compareAt": {
-                    "font-family": "Helvetica Neue, sans-serif",
-                    "font-weight": "normal",
-                    "font-size": "15.299999999999999px",
-                    "color": "#4c4c4c"
-                  },
-                  "unitPrice": {
-                    "font-family": "Helvetica Neue, sans-serif",
-                    "font-weight": "normal",
-                    "font-size": "15.299999999999999px",
-                    "color": "#4c4c4c"
-                  }
-                },
-                "text": {
-                  "button": "Add to cart"
-                }
-              },
-              "option": {},
-              "cart": {
-                "styles": {
-                  "button": {
-                    "font-family": "Avant Garde, sans-serif",
-                    ":hover": {
-                      "background-color": "#a41414"
-                    },
-                    "background-color": "#b61616",
-                    ":focus": {
-                      "background-color": "#a41414"
-                    },
-                    "border-radius": "0px"
-                  }
-                },
-                "text": {
-                  "total": "Subtotal",
-                  "button": "Checkout"
-                }
-              },
-              "toggle": {
-                "styles": {
-                  "toggle": {
-                    "font-family": "Avant Garde, sans-serif",
-                    "background-color": "#b61616",
-                    ":hover": {
-                      "background-color": "#a41414"
-                    },
-                    ":focus": {
-                      "background-color": "#a41414"
-                    }
-                  }
-                }
-              }
-            },
-          });
-        });
+    },
+    "googleFonts": [
+      "PT Sans"
+    ],
+    "text": {
+      "button": "Add to cart"
+    }
+  },
+  "option": {
+    "styles": {
+      "label": {
+        "font-family": "PT Sans, sans-serif"
+      },
+      "select": {
+        "font-family": "PT Sans, sans-serif"
       }
-    })();
-    /*]]>*/
-    </script>
+    },
+    "googleFonts": [
+      "PT Sans"
+    ]
+  },
+  "cart": {
+    "styles": {
+      "button": {
+        "font-family": "PT Sans, sans-serif",
+        ":hover": {
+          "background-color": "#9d9d9d"
+        },
+        "background-color": "#aeaeae",
+        ":focus": {
+          "background-color": "#9d9d9d"
+        },
+        "border-radius": "0px"
+      }
+    },
+    "text": {
+      "total": "Subtotal",
+      "button": "Checkout"
+    },
+    "googleFonts": [
+      "PT Sans"
+    ]
+  },
+  "toggle": {
+    "styles": {
+      "toggle": {
+        "font-family": "PT Sans, sans-serif",
+        "background-color": "#aeaeae",
+        ":hover": {
+          "background-color": "#9d9d9d"
+        },
+        ":focus": {
+          "background-color": "#9d9d9d"
+        }
+      }
+    },
+    "googleFonts": [
+      "PT Sans"
+    ]
+  }
+},
+      });
+    });
+  }
+})();
+/*]]>*/
+</script>
 	
 	<script type="text/javascript">
 /*<![CDATA[*/
