possible product changes

--- a/shop.html
+++ b/shop.html
@@ -43,35 +43,22 @@
                 <div class="products-grid">
                     
                     <!-- Example Products -->
-					   <!--
+					      <!-- Jacket -->
                     <div class="product-card">
-                        <img src="assets/images/Sculpt1.png" alt="Clay Sculpture 1" class="product-card__image">
-                        <div class="product-card__info">
-                            <h3 class="product-card__title">Clay Sculpture 1</h3>
-                            <p class="product-card__price">&pound;29.99</p>
-                            <button class="product-card__buy-button">Add to Cart</button>
+						<div id='product-component-1733480428888'></div>
                         </div>
-                    </div>
+						
+						    <!-- Joggers -->
                     <div class="product-card">
-                        <img src="assets/images/Sculpt2.png" alt="Clay Sculpture 2" class="product-card__image">
-                        <div class="product-card__info">
-                            <h3 class="product-card__title">Clay Sculpture 2</h3>
-                            <p class="product-card__price">&pound;39.99</p>
-                            <button class="product-card__buy-button">Add to Cart</button>
-                        </div>
-                    </div>
-                    <div class="product-card">
-                        <img src="assets/images/Sculpt3.png" alt="Clay Sculpture 3" class="product-card__image">
-                        <div class="product-card__info">
-                            <h3 class="product-card__title">Clay Sculpture 3</h3>
-                            <p class="product-card__price">&pound;24.99</p>
-                            <button class="product-card__buy-button">Add to Cart</button>
+						<div id='product-component-1733480533522'></div>
                         </div>
                     </div>
                     <!-- End of Example Products -->
 
                     <!-- Shopify Collection Buy Button Embed Code -->
-                    <div id='product-component-1733480428888'></div>
+	
+	
+										<!-- Jacket -->
                     <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
@@ -413,7 +400,9 @@
 })();
 /*]]>*/
 </script>
-<div id='product-component-1733480533522'></div>
+
+
+									    <!-- Joggers -->
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
