--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                             <img src="assets/images/jacket-back-32.png" alt="Product 1 Back" class="product-card__image" />
                         </div>
                         <div class="product-card__info">
-                            <h3 class="product-card__title">Jacket</h3>
-                            <p class="product-card__price">&pound;80</p>
+                            <h3 class="product-card__title">ACM WINDBREAKER</h3>
                         </div>
                     </a>
 
@@ -64,8 +63,7 @@
                             <img src="assets/images/joggers-back-12.png" alt="Product 2 Back" class="product-card__image" />
                         </div>
                         <div class="product-card__info">
-                            <h3 class="product-card__title">Joggers</h3>
-                            <p class="product-card__price">&pound;39.99</p>
+                            <h3 class="product-card__title">ACM JOGGERS</h3>
                         </div>
                     </a>
 
