some more changes

--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
         formMessage.innerHTML = '<p class="subscription-form__success">Login successful! Redirecting...</p>';
         // Redirect to protected page after a short delay
         setTimeout(() => {
-          window.location.href = 'index.html';
+          window.location.href = 'shop.html';
         }, 1000); // 1 second delay
       } else {
         formMessage.innerHTML = `<p class="subscription-form__error">${data.message}</p>`;
