--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
             <nav class="nav">
                 <button class="nav__toggle" aria-label="Toggle navigation">&#9776;</button>
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+                    <!-- <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li> -->
                     <li class="nav__item"><a href="shop.html" class="nav__link">Shop</a></li>
                 </ul>
             </nav>
@@ -38,7 +38,6 @@
     <main>
         <section class="products-section">
             <div class="container">
-                <h2 class="products-section__title">Our Collection</h2>
                 <!-- Products Grid -->
                 <div class="products-grid">
                     
