--- a/emailsub.html
+++ b/emailsub.html
@@ -23,6 +23,10 @@
 
                     <input type="email" name="email" id="email" class="subscription-form__input" placeholder="Enter your email" required aria-label="Email Address">
                     <button type="submit" class="subscription-form__button">Join</button>
+					<!-- Link to Login Page with Lock Icon -->
+                    <p class="enter-password-link" style="margin-top: 15px;">
+                         <a href="login.html" class="password-link">🔒 Enter using password</a
+                    </p>
                 </form>
                 <!-- Success and Error Message Container -->
                 <div id="form-message"></div>
