--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,7 @@
                 <button class="nav__toggle" aria-label="Toggle navigation">&#9776;</button>
                 <ul class="nav__list">
                     <!-- <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li> -->
-                    <li class="nav__item"><a href="shop.html" class="nav__link">Shop</a></li>
+                    <!-- <li class="nav__item"><a href="shop.html" class="nav__link">Shop</a></li> -->
                 </ul>
             </nav>
         </div>
