--- a/shop.html
+++ b/shop.html
@@ -24,13 +24,13 @@
     <header class="header">
         <div class="header__container container">
 		<img src="assets/images/logo.png" alt="SplinterShop Logo" class="header__logo">
-            <nav class="nav">
-                <button class="nav__toggle" aria-label="Toggle navigation">&#9776;</button>
-                <ul class="nav__list">
+            <!-- <nav class="nav"> -->
+                <!-- <button class="nav__toggle" aria-label="Toggle navigation">&#9776;</button> -->
+                <!-- <ul class="nav__list"> -->
                     <!-- <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li> -->
                     <!-- <li class="nav__item"><a href="shop.html" class="nav__link">Shop</a></li> -->
-                </ul>
-            </nav>
+                <!-- </ul> -->
+            <!-- </nav> -->
         </div>
     </header>
 
