--- a/emailsub.html
+++ b/emailsub.html
@@ -28,7 +28,7 @@
 					<!-- Link to Login Page with Lock Icon -->
                     <p class="enter-password-link" style="margin-top: 15px;">
                          <a href="login.html" class="password-link">
-						 <span class="lock-icon">🔒</span> Enter using password
+						 <span class="lock-icon"></span> Enter using password
 						 </a>
 						 
 						 
